--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <h2>Chọn Game</h2>
       <div class="game-list">
         <div class="game-item" onclick="chonGame('lol')">
-          <img src="t1.jpg" alt="Liên Minh Huyền Thoại">
+          <img src="T1.jpg" alt="Liên Minh Huyền Thoại">
           <p>Liên Minh Huyền Thoại</p>
         </div>
         <div class="game-item" onclick="chonGame('tocchien')">
@@ -373,3 +373,4 @@
   </script>
 </body>
 </html>
+
